# GlubGlub

./: .gitignore  Cargo.toml  README.md  database.db
src/: economy.rs  macros.rs  main.rs  useful.rs
src/commands/: economy.rs  game.rs  general.rs  mod.rs  owner.rs
