[package]
name = "glub_glub_bot"
version = "0.1.0"
authors = ["LonnonjamesD <xxl3m0nk1ngxx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "*", features = ["bundled"] }
serenity = { version = "*", features = ["client", "gateway", "rustls_backend", "model", "framework"] }
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }
rand = "*"
tuple-conv = "*"
num-format = "*"
futures = "*"