[package]
name = "glub_glub_bot"
version = "0.1.0"
authors = ["LonnonjamesD <xxl3m0nk1ngxx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-postgres = "0.7.2"
serenity = { version = "0.10.9", features = ["client", "gateway", "rustls_backend", "model", "framework"] }
tokio = { version = "1.10.1", features = ["macros", "rt-multi-thread"] }
rand = "0.8.4"
tuple-conv = "1.0.1"
num-format = "0.4.0"
futures = "0.3.16"